--- a/app/views/damages/_form.html.erb
+++ b/app/views/damages/_form.html.erb
@@ -5,19 +5,17 @@
       <%= f.hidden_field :survey_type, :value => @damage.survey_type %>
       <%= f.file_field :image1, :accept => 'image/*', :capture => 'camera' %>
       <%= f.hidden_field :image_url %>
-      
-      <% unless @sonsyo.room_name == "全景" %>
-        <div class="form-group" style="margin-top: 10px; padding: 10px; background: #eee;">    
-          ホワイトボードの配置：
-          <label id="wb_left-top"><%= f.radio_button :position_wb, "0" %>左上</label>&nbsp;&nbsp;&nbsp;&nbsp;
-          <label id="wb_top"><%= f.radio_button :position_wb, "1" %>上</label>&nbsp;&nbsp;&nbsp;&nbsp;
-          <label id="wb_right-top"><%= f.radio_button :position_wb, "2" %>右上</label>&nbsp;&nbsp;&nbsp;&nbsp;
-          <label id="wb_right-under"><%= f.radio_button :position_wb, "3" %>右下</label>&nbsp;&nbsp;&nbsp;&nbsp;
-          <label id="wb_under"><%= f.radio_button :position_wb, "4" %>下</label>&nbsp;&nbsp;&nbsp;&nbsp;
-          <label id="wb_left-under"><%= f.radio_button :position_wb, "5" %>左下</label>&nbsp;&nbsp;&nbsp;&nbsp;
-        </div>
-      <% end %>
-      
+
+      <div class="form-group" style="margin-top: 10px; padding: 10px; background: #eee;">    
+        ホワイトボードの配置：
+        <label id="wb_left-top"><%= f.radio_button :position_wb, "0" %>左上</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label id="wb_top"><%= f.radio_button :position_wb, "1" %>上</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label id="wb_right-top"><%= f.radio_button :position_wb, "2" %>右上</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label id="wb_right-under"><%= f.radio_button :position_wb, "3" %>右下</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label id="wb_under"><%= f.radio_button :position_wb, "4" %>下</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label id="wb_left-under"><%= f.radio_button :position_wb, "5" %>左下</label>&nbsp;&nbsp;&nbsp;&nbsp;
+      </div>
+
       <table class="preview-area">
         <tr>
           <td>
@@ -29,59 +27,57 @@
           </td>
           <td>
             <canvas id="liveview"></canvas>
-            <canvas id="liveview2"></canvas>
+            <canvas id="liveview2"></canvas><!-- ホワイトボード描画用 -->
           </td>
         </tr>
       </table>
 
-      <% unless @sonsyo.room_name == "全景" %>  
-        <div class="form-group" style="margin-top: 20px;">
-          <div class="switch_set">
-            <%= f.check_box :genkyo, {}, "true", "false" %><%= f.label :genkyo, '現況' %>
-            <%= f.check_box :sukima, {}, "true", "false" %><%= f.label :sukima, '隙間' %>
-            <%= f.check_box :ware, {}, "true", "false" %><%= f.label :ware, '割れ' %>
-            <%= f.check_box :kake, {}, "true", "false" %><%= f.label :kake, '欠け' %>
-            <%= f.check_box :crack, {}, "true", "false" %><%= f.label :crack, 'クラック' %>
-            <%= f.check_box :tile, {}, "true", "false" %><%= f.label :tile, 'タイル' %>
-            <%= f.check_box :kire, {}, "true", "false" %><%= f.label :kire, '切れ' %>
-            <%= f.check_box :uki, {}, "true", "false" %><%= f.label :uki, '浮き' %>
-            <%= f.check_box :suhon, {}, "true", "false" %><%= f.label :suhon, '数本' %>
-            <%= f.check_box :chirigire, {}, "true", "false" %><%= f.label :chirigire, 'チリ切れ' %>
-            <%= f.check_box :cross, {}, "true", "false" %><%= f.label :cross, 'クロス' %>
-            <%= f.check_box :meji, {}, "true", "false" %><%= f.label :meji, '目地' %>
-            <%= f.check_box :tategu, {}, "true", "false" %><%= f.label :tategu, '建具' %>
-            <%= f.check_box :tasu, {}, "true", "false" %><%= f.label :tasu, '多数' %>
-            <%= f.check_box :kakusyo, {}, "true", "false" %><%= f.label :kakusyo, '各所' %>
-          </div>
+      <div class="form-group" style="margin-top: 20px;">
+        <div class="switch_set">
+          <%= f.check_box :genkyo, {}, "true", "false" %><%= f.label :genkyo, '現況' %>
+          <%= f.check_box :sukima, {}, "true", "false" %><%= f.label :sukima, '隙間' %>
+          <%= f.check_box :ware, {}, "true", "false" %><%= f.label :ware, '割れ' %>
+          <%= f.check_box :kake, {}, "true", "false" %><%= f.label :kake, '欠け' %>
+          <%= f.check_box :crack, {}, "true", "false" %><%= f.label :crack, 'クラック' %>
+          <%= f.check_box :tile, {}, "true", "false" %><%= f.label :tile, 'タイル' %>
+          <%= f.check_box :kire, {}, "true", "false" %><%= f.label :kire, '切れ' %>
+          <%= f.check_box :uki, {}, "true", "false" %><%= f.label :uki, '浮き' %>
+          <%= f.check_box :suhon, {}, "true", "false" %><%= f.label :suhon, '数本' %>
+          <%= f.check_box :chirigire, {}, "true", "false" %><%= f.label :chirigire, 'チリ切れ' %>
+          <%= f.check_box :cross, {}, "true", "false" %><%= f.label :cross, 'クロス' %>
+          <%= f.check_box :meji, {}, "true", "false" %><%= f.label :meji, '目地' %>
+          <%= f.check_box :tategu, {}, "true", "false" %><%= f.label :tategu, '建具' %>
+          <%= f.check_box :tasu, {}, "true", "false" %><%= f.label :tasu, '多数' %>
+          <%= f.check_box :kakusyo, {}, "true", "false" %><%= f.label :kakusyo, '各所' %>
         </div>
+      </div>
+    
+      <div class="form-group" style="margin-top: 10px; padding: 10px;">
+        矢印の向き：
+        <label><input id="arrow_up" type="radio" checked="checked" name="direction">上</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label><input id="arrow_right" type="radio" name="direction">右</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label><input id="arrow_down" type="radio" name="direction">下</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label><input id="arrow_left" type="radio" name="direction">左</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label><input id="arrow_clean" type="radio" name="direction">クリア</label>
+      </div>
+
+      <div class="form-group">
+        <p>面積：<%= f.text_field :width %>&nbsp;&nbsp;×&nbsp;&nbsp;<%= f.text_field :height %></p>
+        <p>幅：<%= f.text_field :wide %></p>
+      </div>
       
-        <div class="form-group" style="margin-top: 10px; padding: 10px;">
-          矢印の向き：
-          <label><input id="arrow_up" type="radio" checked="checked" name="direction">上</label>&nbsp;&nbsp;&nbsp;&nbsp;
-          <label><input id="arrow_right" type="radio" name="direction">右</label>&nbsp;&nbsp;&nbsp;&nbsp;
-          <label><input id="arrow_down" type="radio" name="direction">下</label>&nbsp;&nbsp;&nbsp;&nbsp;
-          <label><input id="arrow_left" type="radio" name="direction">左</label>&nbsp;&nbsp;&nbsp;&nbsp;
-          <label><input id="arrow_clean" type="radio" name="direction">クリア</label>
-        </div>
-  
-        <div class="form-group">
-          <p>面積：<%= f.text_field :width %>&nbsp;&nbsp;×&nbsp;&nbsp;<%= f.text_field :height %></p>
-          <p>幅：<%= f.text_field :wide %></p>
-        </div>
-        
-        <div class="form-group">
-          長さ：&nbsp;<label><%= f.check_box :amimejyo, {}, "true", "false" %>網目状</label>&nbsp;&nbsp;
-          <label><%= f.check_box :zencho, {}, "true", "false" %>全長</label>&nbsp;&nbsp;
-          <label><%= f.check_box :zenshu, {}, "true", "false" %>全周</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <%= f.text_field :length %></span>
-        </div>
-        
-        <div class="form-group">
-          <%= f.label :comment, 'コメント' %>
-          <%= f.text_area :comment, :class=>"form-control" %>
-        </div>
-      <% end %>
+      <div class="form-group">
+        長さ：&nbsp;<label><%= f.check_box :amimejyo, {}, "true", "false" %>網目状</label>&nbsp;&nbsp;
+        <label><%= f.check_box :zencho, {}, "true", "false" %>全長</label>&nbsp;&nbsp;
+        <label><%= f.check_box :zenshu, {}, "true", "false" %>全周</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <%= f.text_field :length %></span>
+      </div>
       
+      <div class="form-group">
+        <%= f.label :comment, 'コメント' %>
+        <%= f.text_area :comment, :class=>"form-control" %>
+      </div>
+
       <%= f.submit '登録', :class=>"btn btn-primary", :id=>"submit", method: :delete, data: { confirm: '登録してよろしいでしょうか？' } %>
     <% end %>
   </div>
@@ -102,33 +98,27 @@
 
   // ホワイトボードの描画
   function drawWB(x, y, width, height) {
-    /* 初期化 */
-    ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-    //ctx.putImageData(imgData, 0, 0);
-    //ctx2.clearRect(0, 0, canvas.width, canvas.height);
-
+    // 初期化
+    ctx2.clearRect(0, 0, canvas2.width, canvas2.height);
     // パスをリセット
-    ctx.beginPath();
+    ctx2.beginPath();
     // レクタングルの座標(x, y)とサイズ(width, height)を指定
-    ctx.rect( x, y, width, height );
+    ctx2.rect( x, y, width, height );
     // 塗りつぶしの色
-    ctx.fillStyle = "rgba(255,255,255,0.7)";
+    ctx2.fillStyle = "rgba(255,255,255,0.7)";
     // 塗りつぶしを実行
-    ctx.fill();
+    ctx2.fill();
     // 線の色
-    ctx.strokeStyle = "yellow";
+    ctx2.strokeStyle = "yellow";
     // 線の太さ
-    ctx.lineWidth = 2;
+    ctx2.lineWidth = 2;
     // 線を描画を実行
-    ctx.stroke();
+    ctx2.stroke();
   }
 
   $('#damage_image1').on('change', function (e) {
     reader.onload = function (e) {
       img.src = e.target.result;
-      // iPad 第6世代
-      //img.width = 3264;
-      //img.height = 2448;
 
       img.onload = function() {
         var rate = img.naturalWidth / canvas.clientWidth;
@@ -136,14 +126,12 @@
         canvasHeight = img.naturalHeight / rate;
         canvas.width = canvasWidth;
         canvas.height = canvasHeight;
-        // 矢印用キャンバス
+        // ホワイトボード用キャンバス
         canvas2.width = canvasWidth;
         canvas2.height = canvasHeight;
         
         // 画像を描画
         ctx.drawImage(img, 0, 0, canvasWidth, this.height * (canvasWidth / this.width));
-        // 画像をデータ化
-        //imgData = ctx.getImageData(0, 0, canvasWidth, this.height * (canvasWidth / this.width));
         // ホワイトボード描画
         drawWB(0, 0, wb_width, wb_height);
       }
@@ -155,84 +143,84 @@
     drawWB(0, 0, wb_width, wb_height);
   });
   $('#wb_top').on('click', function (e) {
-    drawWB(canvas.width/2 - wb_width/2, 0, wb_width, wb_height);
+    drawWB(canvas2.width/2 - wb_width/2, 0, wb_width, wb_height);
   });
   $('#wb_right-top').on('click', function (e) {
-    drawWB(canvas.width - wb_width, 0, wb_width, wb_height);
+    drawWB(canvas2.width - wb_width, 0, wb_width, wb_height);
   });
   $('#wb_right-under').on('click', function (e) {
-    drawWB(canvas.width - wb_width, canvas.height - wb_height, wb_width, wb_height);
+    drawWB(canvas2.width - wb_width, canvas2.height - wb_height, wb_width, wb_height);
   });
   $('#wb_under').on('click', function (e) {
-    drawWB(canvas.width/2 - wb_width/2, canvas.height - wb_height, wb_width, wb_height);
+    drawWB(canvas2.width/2 - wb_width/2, canvas2.height - wb_height, wb_width, wb_height);
   });
   $('#wb_left-under').on('click', function (e) {
-    drawWB(0, canvas.height - wb_height, wb_width, wb_height);
+    drawWB(0, canvas2.height - wb_height, wb_width, wb_height);
   });
   
   $('#liveview2').on('click', function(e){
     if(document.getElementById( "arrow_clean" ).checked) {
       // 初期化
-      //ctx.drawImage(img, 0, 0, canvasWidth, this.height * (canvasWidth / this.width));
-      ctx2.clearRect(0, 0, canvas2.width, canvas2.height);
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
     } else {
       // 実際の画像サイズと描画領域の倍率を算出
-      var rate = canvas2.width / canvas2.clientWidth;
+      var rate = canvas.width / canvas.clientWidth;
       let offsetX = e.offsetX * rate; // =>要素左上からのx座標
       let offsetY = e.offsetY * rate; // =>要素左上からのy座標
   
       var w=40,h=40,w0=w*0.5,h0=h*0.25,x=offsetX,y=offsetY;
       // 矢印描画     
-      ctx2.setTransform(1,0,0,1,0,0);
-      ctx2.translate(x,y);
-      ctx2.beginPath();
-      ctx2.fillStyle = 'red';
+      ctx.setTransform(1,0,0,1,0,0);
+      ctx.translate(x,y);
+      ctx.beginPath();
+      ctx.fillStyle = 'red';
       if ( document.getElementById( "arrow_up" ).checked ) {
       	// 上
-        ctx2.moveTo(-h0,w0);    	
-      	ctx2.lineTo(-h0,0);
-        ctx2.lineTo(-w0,0);
-        ctx2.lineTo(0,-w0);
-        ctx2.lineTo(w0,0);
-        ctx2.lineTo(h0,0);
-        ctx2.lineTo(h0,w0);
-        ctx2.lineTo(-h0,w0);
+        ctx.moveTo(-h0,w0);    	
+      	ctx.lineTo(-h0,0);
+        ctx.lineTo(-w0,0);
+        ctx.lineTo(0,-w0);
+        ctx.lineTo(w0,0);
+        ctx.lineTo(h0,0);
+        ctx.lineTo(h0,w0);
+        ctx.lineTo(-h0,w0);
       } else if ( document.getElementById( "arrow_right" ).checked ) {
       	// 右
-        ctx2.moveTo(-w0,-h0);    	
-      	ctx2.lineTo(0,-h0);
-        ctx2.lineTo(0,-w0);
-        ctx2.lineTo(w0,0);
-        ctx2.lineTo(0,w0);
-        ctx2.lineTo(0,h0);
-        ctx2.lineTo(-w0,h0);
-        ctx2.lineTo(-w0,-h0);
+        ctx.moveTo(-w0,-h0);    	
+      	ctx.lineTo(0,-h0);
+        ctx.lineTo(0,-w0);
+        ctx.lineTo(w0,0);
+        ctx.lineTo(0,w0);
+        ctx.lineTo(0,h0);
+        ctx.lineTo(-w0,h0);
+        ctx.lineTo(-w0,-h0);
       } else if ( document.getElementById( "arrow_down" ).checked ) {
       	// 下
-        ctx2.moveTo(-h0,-w0);    	
-      	ctx2.lineTo(-h0,0);
-        ctx2.lineTo(-w0,0);
-        ctx2.lineTo(0,w0);
-        ctx2.lineTo(w0,0);
-        ctx2.lineTo(h0,0);
-        ctx2.lineTo(h0,-w0);
-        ctx2.lineTo(-h0,-w0);    	
+        ctx.moveTo(-h0,-w0);    	
+      	ctx.lineTo(-h0,0);
+        ctx.lineTo(-w0,0);
+        ctx.lineTo(0,w0);
+        ctx.lineTo(w0,0);
+        ctx.lineTo(h0,0);
+        ctx.lineTo(h0,-w0);
+        ctx.lineTo(-h0,-w0);    	
       } else if ( document.getElementById( "arrow_left" ).checked ) {
       	// 左
-        ctx2.moveTo(w0,-h0);
-      	ctx2.lineTo(0,-h0);
-        ctx2.lineTo(0,-w0);
-        ctx2.lineTo(-w0,0);
-        ctx2.lineTo(0,w0);
-        ctx2.lineTo(0,h0);
-        ctx2.lineTo(w0,h0);
-        ctx2.lineTo(w0,-h0);
+        ctx.moveTo(w0,-h0);
+      	ctx.lineTo(0,-h0);
+        ctx.lineTo(0,-w0);
+        ctx.lineTo(-w0,0);
+        ctx.lineTo(0,w0);
+        ctx.lineTo(0,h0);
+        ctx.lineTo(w0,h0);
+        ctx.lineTo(w0,-h0);
       }
-      ctx2.stroke();
-      ctx2.fill();
-      ctx2.closePath();
-      ctx2.setTransform(1,0,0,1,0,0);
-      //imgData = ctx2.getImageData(0, 0, canvas.width, canvas.height);
+      ctx.stroke();
+      ctx.fill();
+      ctx.closePath();
+      ctx.setTransform(1,0,0,1,0,0);
+      
+      console.log(ctx);
     }
   });
 
