--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,27 +9,6 @@
   else
     survey_type_name = "その他"
   end
-  
-  position_wb = @post.position_wb
-  if position_wb == 0
-    position_wb_name = "左"
-  elsif position_wb == 1
-    position_wb_name = "左上"
-  elsif position_wb == 2
-    position_wb_name = "上"
-  elsif position_wb == 3
-    position_wb_name = "右上"
-  elsif position_wb == 4
-    position_wb_name = "右"
-  elsif position_wb == 5
-    position_wb_name = "右下"
-  elsif position_wb == 6
-    position_wb_name = "下"
-  elsif position_wb == 7
-    position_wb_name = "左下"
-  else
-    position_wb_name = "その他"
-  end    
 %>
 
 <ol class="breadcrumb">
@@ -42,44 +21,67 @@
 <h2 class="text-center">測点：P.<%= @point.number %>の撮影（<%= survey_type_name %>）</h2>
 <%= link_to '編集', edit_post_path(point_id: @point.id, survey_type: survey_type), :class=>"btn btn-primary" %>
 
-<table style="margin-top:10px;">
-  <tr>
-    <td><%= image_tag @post.image1 %></td>
-    <td>
-      <table class="table table-bordered" style="margin:10px;">
-        <tr>
-          <td>調査日</td>
-          <td style="min-width: 350px;" colspan="4"><%= @post.updated_at.strftime('%Y/%m/%d') %></td>
-        </tr>
-        <tr>
-          <td>家屋名</td>
-          <td colspan="4"><%= @house.house_name %></td>
-        </tr>
-        <tr>
-          <td>家屋No.</td>
-          <td><%= @house.id %></td>
-          <td>写真No.</td>
-          <td colspan="2"></td>
-        </tr>
-        <tr>
-          <td>調査箇所</td>
-          <td colspan="4"><%= @point.room_name %></td>
-        </tr>
-        <tr>
-          <td>往路データ</td>
-          <td colspan="2">BS：<%= @post.ouro_bs %></td>
-          <td colspan="2">FS：<%= @post.ouro_fs %></td>          
-        </tr>
-        <tr>
-          <td>復路データ</td>
-          <td colspan="2">BS：<%= @post.fukuro_bs %></td>
-          <td colspan="2">FS：<%= @post.fukuro_fs %></td>          
-        </tr>        
-        <tr>
-          <td>コメント</td>
-          <td colspan="4"><%= @post.comment %></td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>
+<div class="post-img">
+  <%= image_tag @post.image1 %>
+  <% if @post.position_wb == 0 %>
+    <!-- 左上 -->
+    <div class="wb_left_top"><%= render 'posts/wb', { house: @house, point: @point, post: @post } %></div>  
+  <% elsif @post.position_wb == 1 %>
+    <!-- 上 -->
+    <div class="wb_top"><%= render 'posts/wb', { house: @house, point: @point, post: @post } %></div>    
+  <% elsif @post.position_wb == 2 %>
+    <!-- 右上 -->
+    <div class="wb_right_top"><%= render 'posts/wb', { house: @house, point: @point, post: @post } %></div>    
+  <% elsif @post.position_wb == 3 %>
+    <!-- 右下 -->
+    <div class="wb_right_down"><%= render 'posts/wb', { house: @house, point: @point, post: @post } %></div>    
+  <% elsif @post.position_wb == 4 %>
+    <!-- 下 -->
+    <div class="wb_down"><%= render 'posts/wb', { house: @house, point: @point, post: @post } %></div>
+  <% else %>
+    <!-- 左下 -->
+    <div class="wb_left_down"><%= render 'posts/wb', { house: @house, point: @point, post: @post } %></div>
+  <% end %>
+</div>
+
+<style>
+.post-img {
+  position: relative;
+  margin-top:10px;
+  width: 60%;
+  font-size: 60%;
+}
+.post-img > img {
+  width: 100%;
+}
+.post-img > .wb_left_top {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.post-img > .wb_top {
+  position: absolute;
+  top: 0;
+  left: 40%;
+}
+.post-img > .wb_right_top {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.post-img > .wb_right_down {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.post-img > .wb_down {
+  position: absolute;
+  bottom: 0;
+  left: 40%;
+}
+.post-img > .wb_left_down {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+</style>
