--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -32,6 +32,11 @@
       </table>
       
       <div class="form-group">
+        <%= f.label :hyoko, '標高：' %>
+        <%= f.text_field :hyoko %>
+      </div>
+      
+      <div class="form-group">
         往路データ&nbsp;&nbsp;&nbsp;&nbsp;
         <%= f.label :ouro_bs, 'BS：' %>
         <%= f.text_field :ouro_bs %>&nbsp;&nbsp;&nbsp;&nbsp;
