--- a/app/views/posts/_wb.html.erb
+++ b/app/views/posts/_wb.html.erb
@@ -18,6 +18,10 @@
     <td colspan="4"><%= point.room_name %></td>
   </tr>
   <tr>
+    <td>標高</td>
+    <td colspan="4"><%= post.hyoko %></td>
+  </tr>
+  <tr>
     <td>往路データ</td>
     <td colspan="2">BS：<%= post.ouro_bs %></td>
     <td colspan="2">FS：<%= post.ouro_fs %></td>          
