--- a/app/views/houses/_select_option_for_sonsyo.html.erb
+++ b/app/views/houses/_select_option_for_sonsyo.html.erb
@@ -14,7 +14,7 @@
 <option data-group="outter" value="塀西">塀西</option>
 <option data-group="outter" value="塀西（内）">塀西（内）</option>      
 <option data-group="outter" value="擁壁">擁壁</option>
-<option data-group="outter" value="外部（その他）">その他</option>      
+<option data-group="outter" value="外部（その他）">外部（その他）</option>      
 <!-- 内部 -->
 <option data-group="inner" value="玄関">玄関</option>
 <option data-group="inner" value="エントランス">エントランス</option>      
@@ -51,8 +51,8 @@
 <option data-group="inner" value="倉庫">倉庫</option>
 <option data-group="inner" value="店舗">店舗</option>      
 <option data-group="inner" value="事務所">事務所</option>
-<option data-group="inner" value="事務室>事務室</option>
+<option data-group="inner" value="事務室">事務室</option>
 <option data-group="inner" value="湯沸室">湯沸室</option>
 <option data-group="inner" value="給湯室">給湯室</option>      
 <option data-group="inner" value="土間">土間</option>
-<option data-group="inner" value="内部（その他）">その他</option>
+<option data-group="inner" value="内部（その他）">内部（その他）</option>
